syntax = "proto3";

package api.notification.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package="github.com/qthuy2k1/thesis_management_backend/notification/api/v1";

service NotificationService {
    rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse) {
        option (google.api.http) = {
            get: "/api/notification"
        };
    }

    rpc CreateNotification(CreateNotificationRequest) returns (CreateNotificationResponse) {
        option (google.api.http) = {
            post: "/api/notification"
            body: "*"
        };
    }
}


message UserNotificationResponse {
    string id = 1;
    optional string class = 2;
    optional string major = 3;
    optional string phone = 4;
    string photoSrc = 5;
    string role = 6;
    string name = 7;
    string email = 8;
}

// NOTIFICATION
message Notification {
    string id = 1;
    string senderUserID = 2;
    string receiverAuthorID = 3;
    string type = 4;
}

message NotificationResponse {
    string id = 1;
    UserNotificationResponse senderUser = 2;
    UserNotificationResponse receiverAuthor = 3;
    string type = 4;
    google.protobuf.Timestamp createdAt = 5;
}


message GetNotificationsRequest {
}

message GetNotificationsResponse {
    repeated NotificationResponse notifications = 1;
}

message CreateNotificationRequest {
    Notification noti = 1;
}

message CreateNotificationResponse {
    NotificationResponse notification = 1;
    string message = 2;
    repeated NotificationResponse notifications = 3;
}